removed horizontal scroll on mobile, fixed home links

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -45,7 +45,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     padding: 29px 24px 112px 20px;
     transition: transform $transition-duration ease-out;
 
